Update whitespace issue

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -110,7 +110,6 @@ table {
   --tertiary-color: whitesmoke;
   --button-color: #58b0ff;
 }
-
 /* Typography */
 body {
   color: var(--text-color);
@@ -407,6 +406,7 @@ button {
   border: .25px solid var(--primary-color);
   border-radius: 3px;
   background-color: var(--primary-color);
+  margin-top: 10px;
 }
 
 button:hover {
@@ -422,6 +422,12 @@ button:hover {
   overflow: hidden;   
   min-width: 160px; 
   width: 100%;    
+}
+
+select {
+  padding: 5px 10px;
+  border: .5px solid var(--primary-color);
+  margin: 10px;
 }
 
 /* General Styles */
